# private-verifiable-compute

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
common/ohttp/src/: lib.rs
common/pvc-client-core/: BUILD.bazel  Cargo.toml
common/pvc-client-core/src/: lib.rs
common/types/src/: lib.rs
dependencies/: bookworm.lock.json  bookworm.yaml  jammy.lock.json  jammy.yaml
deployment/: deploy.sh
deployment/chart/: values.yaml
deployment/chart/templates/: configmap.yaml
deployment/chart/templates/client/: deployment.yaml  service.yaml
deployment/chart/templates/identity-server/: deployment.yaml  service.yaml
deployment/chart/templates/privacy-gateway/: deployment.yaml  secret.yaml  service.yaml
deployment/chart/templates/relay/: deployment.yaml  service.yaml
deployment/chart/templates/tee-llm/: deployment.yaml  embedding_deployment.yaml  embedding_pvc.yaml  embedding_service.yaml  llm_deployment.yaml  llm_pvc.yaml  llm_service.yaml  service.yaml
deployment/envs/: gke.yaml  kata.yaml  minikube.yaml
deployment/scripts/: deploy-gke.sh  deploy-kata.sh  deploy-minikube.sh  deploy.sh
docker/: Dockerfile.pvc-builder
docs/: anonymous_routing.md  build.md  coco.md  gcp.md  index.md  minikube.md  noise.md  package.json  pvc-cli.md  reproducibility.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
pvc-cli/: BUILD.bazel  Cargo.toml
pvc-cli/src/: config.rs  file_input.rs  main.rs  output.rs  session.rs
pvc-cli/src/commands/: attest.rs  chat.rs  login.rs  session.rs  upload.rs
pvc-client/: BUILD.bazel  build_front.sh  sgx_default_qcnl.conf
pvc-client-js/src/lib/: api.ts  attest_wasm.test.ts  attestation.ts  chat_retry.test.ts
pvc-client/frontend/: BUILD.bazel
pvc-client/frontend/src/: App.css  App.jsx
pvc-client/src/: auth.rs  main.rs  server.rs
pvc-identity-server/: BUILD.bazel
pvc-ohttp-gateway/: BUILD.bazel
pvc-ohttp-relay/: BUILD.bazel
pvc-tee-llm/: BUILD.bazel  Cargo.toml
pvc-tee-llm/src/: attestation.rs  chat.rs  main.rs  noise.rs
resources/deployment/: apply.sh
resources/global/: apply.sh
scripts/: build_pvc_builder_image.sh  install_dev_dependencies.sh  load_reproducible_images.sh  reproducible_build.sh
tools/: BUILD.bazel  reproducible_oci.bzl
