[package]
name = "pvc-cli"
version = "0.1.0"
license = "Apache-2.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
types = { workspace = true }
pvc-client-core = { path = "../common/pvc-client-core" }
