[package]
name = "pvc-client-core"
version = "0.1.0"
license = "Apache-2.0"
edition.workspace = true

[features]
default = ["noise", "attestation", "base64"]
attestation = ["dep:verifier"]
noise = []
base64 = []

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
types = { workspace = true }
blind-rsa = { workspace = true }
identity = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
ohttp_wrap = { workspace = true }
hex = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
noise = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
p256 = { workspace = true }
kbs-types = { workspace = true }
reqwest = { workspace = true }
tokio-util = { version = "0.7", features = ["codec", "io"] }
# NOTE: this `verifier` rev MUST stay schema-compatible with the
# `attester` rev pinned in `pvc-tee-llm/Cargo.toml`. They live in
# different upstream repos (`trustee` vs `guest-components`) but exchange
# evidence/claim shapes on the wire, so bumping one side requires
# verifying the other still verifies the produced evidence.
verifier = { git = "https://github.com/confidential-containers/trustee", rev = "f342a12", features = [
  "tdx-verifier",
  "nvidia-verifier",
], optional = true }

[dev-dependencies]
blind-rsa-signatures = { workspace = true }
num-bigint-dig = "0.8.4"
